# genai-workshop-binge-qa

./: .gitignore  Dockerfile v0.api  Dockerfile v0.app  Dockerfile.api  Dockerfile.app  Readme.md  build.sh  build_api.sh  build_app.sh  dev-requirements.txt  run_locally.sh
api_app/: app.py  requirements langchain v0.3.3.txt  requirements.txt  testbench.rest
chat_app/: app.py  config.toml  configuration.py  prompts_en.py  prompts_nl.py  pyproject.toml  reply.py  requirements.txt
chat_app/notebooks/: ingestion.ipynb
demoapp/: chat.py  chat_app.py  prompts_en.py  prompts_nl.py  search_app.py  show_similar_app.py
flaskapi/: app.py  find_similar_app.py  pyproject.toml  test.py
flaskapi/data/index/: index.pkl
pipeline/: document_ingestion.py
pipeline/notebooks/: ingestion.ipynb
utils/: bingeapp_popcorn_to_text.py  embed_documents.py  key_generator.py  load_documents_to_chroma.py  load_plain_text_documents_to_chroma.py
