[tool.poetry]
name = "bindinc-chat"
version = "0.1.0"
description = ""
authors = [
    "Caio Benatti Moretti <caio.benatti@xebia.com>",
    "Dennis Vink <dennis.vink@xebia.com>",
    "Igor Kuznetsov <igor.kuznetsov@bindinc.nl>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.279"
vertexai = "^0.0.1"
google-cloud-aiplatform = "^1.31.1"
streamlit = "^1.26.0"
tqdm = "^4.66.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
